Add dedicated upload button

--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,10 @@ footer {
   );
 }
 
+input[type="file"] {
+    display: none;
+}
+
 button > .fa-caret-down {
     height: 100%;
     display: inline;
